--- a/index.html
+++ b/index.html
@@ -479,11 +479,12 @@
                   </video> -->
                                     </div>
                                     <div class="video-embed-hero w-embed w-iframe">
-                                        <iframe src="./images/daddaytatehero.mp4"
+                                        <iframe src="./images/daddaytatehero.MP4"
                                                 style="border: none; position: absolute; top: 0; left: 0; height: 89%; width: 100%;"
                                                 allow="accelerometer; gyroscope; autoplay; encrypted-media; picture-in-picture;"
                                                 allowfullscreen="true"></iframe>
                                     </div>
+
 
                                 </div>
                                 <div class="hero_video_black-gradient"></div>
@@ -579,7 +580,7 @@
                                     <p class="textttt">WE GONNA SEND TATE 40% OF THE SUPPLY OF $RGT JUST BECAUSE HE IS A Rogue
                                         Genie</p>
                                     <div class="employee_wrap">
-                                        <div>Remain a poor Jeet</div>
+                                        <div>Check TX sent to tate</div>
                                     </div>
                                 </div>
                                 <div class="icon_vs w-embed">
