--- a/index.html
+++ b/index.html
@@ -495,7 +495,7 @@
                                         </div>
                                     </div>
                                     <div class="relative">
-                                        <div class="button_text">Buy Rogue Genie Tate</div>
+                                        <div class="button_text">Buy $RGT Now!</div>
                                     </div>
                                     <div class="icon_button-light pointer-events-off w-embed">
                                         <svg xmlns="http://www.w3.org/2000/svg" width="100%" height="100%"
