--- a/index.html
+++ b/index.html
@@ -350,11 +350,8 @@
          role="banner" class="navbar w-nav">
         <div class="padding-global">
             <div class="container-large is-nav">
-                <a href="https://x.com/daddytatecto" target="_blank" class="university-logo_wrap w-nav-brand"><img
-                        src="images/university-logo.png" loading="lazy" width="102" alt="university.com logo"
-                        class="university-logo"></a>
                 <nav role="navigation" class="nav_links w-nav-menu">
-                    <a href="https://x.com/daddytatecto" class="nav_link w-inline-block">
+                    <a href="https://x.com/CobratateRGT" class="nav_link w-inline-block">
                         <div class="nav_link_text">Twitter</div>
                         <div class="nav_link_line"></div>
                     </a>
@@ -362,23 +359,23 @@
                         <div class="nav_link_text">Telegram</div>
                         <div class="nav_link_line"></div>
                     </a>
-                    <a href="https://raydium.io/swap/?inputMint=sol&outputMint=4Cnk9EPnW5ixfLZatCPJjDB1PUtcRpVVgTQukm9epump"
+                    <a href="#"
                        class="nav_link w-inline-block">
                         <div class="nav_link_text">Raydium</div>
                         <div class="nav_link_line"></div>
                     </a>
-                    <a href="https://dexscreener.com/solana/4Cnk9EPnW5ixfLZatCPJjDB1PUtcRpVVgTQukm9epump"
+                    <a href="#"
                        class="nav_link is-last w-inline-block">
                         <div class="nav_link_text">DexScreener</div>
                         <div class="nav_link_line"></div>
                     </a>
-                    <a href="https://www.dextools.io/app/en/solana/pair-explorer/zcdAw3jpcqEY8JYVxNVMqs2cU35cyDdy4ot7V8edNhz?t=1718229939105"
+                    <a href="#"
                        target="_blank" class="nav_link is-last w-inline-block">
                         <div class="nav_link_text">DexTools</div>
                         <div class="nav_link_line"></div>
                     </a>
                 </nav>
-                <a href="https://x.com/daddyTateCTO" class="button_nav login-btn w-inline-block">
+                <a href="https://x.com/CobratateRGT" class="button_nav login-btn w-inline-block">
                     <div class="icon_login w-embed">
                         <svg xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" viewbox="0 0 21 20"
                              fill="none" preserveaspectratio="xMidYMid meet" aria-hidden="true" role="img">
