--- a/builder.html
+++ b/builder.html
@@ -361,11 +361,8 @@
          role="banner" class="navbar w-nav">
         <div class="padding-global">
             <div class="container-large is-nav">
-                <a href="https://x.com/daddytatecto" target="_blank" class="university-logo_wrap w-nav-brand"><img
-                        src="images/university-logo.png" loading="lazy" width="102" alt="university.com logo"
-                        class="university-logo"></a>
                 <nav role="navigation" class="nav_links w-nav-menu">
-                    <a href="https://x.com/daddytatecto" class="nav_link w-inline-block">
+                    <a href="https://x.com/CobratateRGT" class="nav_link w-inline-block">
                         <div class="nav_link_text">Twitter</div>
                         <div class="nav_link_line"></div>
                     </a>
@@ -389,7 +386,7 @@
                         <div class="nav_link_line"></div>
                     </a>
                 </nav>
-                <a href="https://x.com/daddyTateCTO" class="button_nav login-btn w-inline-block">
+                <a href="https://x.com/CobratateRGT" class="button_nav login-btn w-inline-block">
                     <div class="icon_login w-embed">
                         <svg xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" viewbox="0 0 21 20"
                              fill="none" preserveaspectratio="xMidYMid meet" aria-hidden="true" role="img">
@@ -461,6 +458,7 @@
                                                         <option value="3.png">Rage</option>
                                                         <option value="4.png">Super</option>
                                                         <option value="5.png">Fire</option>
+                                                        <option value="6.png">BOOM</option>
                                                     </select>
                                                 </div>
 
@@ -476,22 +474,6 @@
                                                         <option value="6.png">Toppat Clan Leader</option>
                                                         <option value="7.png">Rick</option>
                                                         <option value="8.png">Morty</option>
-                                                    </select>
-                                                </div>
-
-                                                <div class="select-container">
-                                                    <label STYLE="color: gray" for="outfits"
-                                                           class="form-label">Outfit</label>
-                                                    <select id="outfits" class="form-select">
-                                                        <option value="none.png">Clean</option>
-                                                        <option value="1.png">Morty</option>
-                                                        <option value="2.png">Rick</option>
-                                                        <option value="3-outfit.png">Hades</option>
-                                                        <option value="4-outfit.png">Hercules</option>
-                                                        <option value="5-outfit.png">Megara</option>
-                                                        <option value="6-outfit.png">Hearts</option>
-                                                        <option value="beard.png">Alice</option>
-                                                        <option value="7.png">Ballerina</option>
                                                     </select>
                                                 </div>
 
