--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@
                         </svg>
                     </div>
                 </a>
-                <div data-w-id="eaaded23-f8de-e0dc-7ee9-4de201875e71" class="menu_button w-nav-button">
+                <div data-w-id="eaaded23-f8de-e0dc-7ee9-4de201875e71" class="menFu_button w-nav-button">
                     <div data-is-ix2-target="1" class="lottie_menu" data-w-id="79ab3dfe-2bd8-b5e1-a887-574f420d3028"
                          data-animation-type="lottie" data-src="documents/lottie-menu.json" data-loop="0"
                          data-direction="1" data-autoplay="0" data-renderer="svg" data-default-duration="2.36"
@@ -512,7 +512,7 @@
                                     </div>
                                 </a>
                                 <a data-w-id="7b0fbdb2-2cdd-8367-9734-87832af2bc41" style="opacity:1"
-                                   href="https://raydium.io/swap/?inputMint=sol&outputMint=4Cnk9EPnW5ixfLZatCPJjDB1PUtcRpVVgTQukm9epump"
+                                   href="./builder.html"
                                    class="button checkout-btn w-inline-block">
                                     <div class="relative">
                                         <div class="icon_button-arrow w-embed">
