--- a/index.html
+++ b/index.html
@@ -359,12 +359,12 @@
                         <div class="nav_link_text">Telegram</div>
                         <div class="nav_link_line"></div>
                     </a>
-                    <a href="#"
+                    <a href="https://raydium.io/swap/?inputMint=sol&outputMint=D7M8bBuDGrmhrJvrNJXLspTQgpnkTN1WJvQ8wTs3pump"
                        class="nav_link w-inline-block">
                         <div class="nav_link_text">Raydium</div>
                         <div class="nav_link_line"></div>
                     </a>
-                    <a href="#"
+                    <a href="https://dexscreener.com/solana/D7M8bBuDGrmhrJvrNJXLspTQgpnkTN1WJvQ8wTs3pump"
                        class="nav_link is-last w-inline-block">
                         <div class="nav_link_text">DexScreener</div>
                         <div class="nav_link_line"></div>
