--- a/builder.html
+++ b/builder.html
@@ -25,6 +25,7 @@
     <link href="css/normalize.css" rel="stylesheet" type="text/css">
     <link href="css/webflow.css" rel="stylesheet" type="text/css">
     <link href="css/university-com.webflow.css" rel="stylesheet" type="text/css">
+    <link rel="shortcut icon" href="./images/favicon.png" type="image/x-icon">
     <script type="text/javascript">!function (o, c) {
         var n = c.documentElement, t = " w-mod-";
         n.className += t + "js", ("ontouchstart" in o || o.DocumentTouch && c instanceof DocumentTouch) && (n.className += t + "touch")
