--- a/builder.html
+++ b/builder.html
@@ -413,7 +413,7 @@
                         <div class="hero_content">
                             <div class="title-gold">Rogue Genie Tate</div>
                             <h1 data-w-id="a3f1d39c-859f-1a28-8133-45116f9a8ecc" style="opacity:1">that
-                                <br><strong>does whatever he wants</strong></h1>
+                                <br><strong>Make your own Genie</strong></h1>
                             <section data-bs-version="5.1" class="nichem5 list1 cid-tElwX4zN0s" id="1"
                                      style=" background-color: transparent;padding-bottom: 50px">
                                 <div class="container">
