--- a/index.html
+++ b/index.html
@@ -676,7 +676,7 @@
                                         <div class="glow_line"></div>
                                     </div>
 
-                                    <p class="textttt text-color-white">WE GONNA BURN 10% OF $RGT BECAUSE WE DO WHATEVER
+                                    <p class="textttt text-color-white">WE GONNA SEND MORE $RGT TO TATE BECAUSE WE DO WHATEVER
                                         WE
                                         WANT</span>
                                     </p>
