--- a/index.html
+++ b/index.html
@@ -603,12 +603,12 @@
                                         <div class="glow_line"></div>
                                     </div>
 
-                                    <p class="textttt">WE GONNA SEND TATE 40% OF THE SUPPLY OF $RGT JUST BECAUSE HE IS A
+                                    <p class="textttt">WE SENT TATE 40% OF THE SUPPLY OF $RGT AND WE JUST BECAUSE HE IS A
                                         Rogue
                                         Genie</p>
 
                                     <a data-w-id="7b0fbdb2-2cdd-8367-9734-87832af2bc41" style="opacity:1"
-                                       href="https://raydium.io/swap/?inputMint=sol&outputMint=4Cnk9EPnW5ixfLZatCPJjDB1PUtcRpVVgTQukm9epump"
+                                       href="https://solscan.io/tx/3xyMd1ARfmXx7YfoZCeuLvttaE7iTNzKi3Gn3RG3nqFqBiWP3wSVREUEtUAvEM35wfuMV22GbHNbpWeNGqij919y"
                                        class="button checkout-btn w-inline-block">
                                         <div class="relative">
                                             <div class="icon_button-arrow w-embed">
@@ -629,7 +629,7 @@
                                             </div>
                                         </div>
                                         <div class="relative">
-                                            <div class="button_text">SolScan TXN to Tate</div>
+                                            <div class="button_text">SolScan</div>
                                         </div>
                                         <div class="icon_button-light pointer-events-off w-embed">
                                             <svg xmlns="http://www.w3.org/2000/svg" width="100%" height="100%"
@@ -676,11 +676,12 @@
                                         <div class="glow_line"></div>
                                     </div>
 
-                                    <p class="textttt text-color-white">WE GONNA SEND MORE $RGT TO TATE BECAUSE WE DO WHATEVER
+                                    <p class="textttt text-color-white">WE SENT TATE 20% MORE $RGT TO TATE BECAUSE WE DO WHATEVER
                                         WE
                                         WANT</span>
                                     </p>
-                                    <a href="https://raydium.io/swap/?inputMint=sol&outputMint=4Cnk9EPnW5ixfLZatCPJjDB1PUtcRpVVgTQukm9epump"
+                                    <a href="https://solscan.io/tx/3xyMd1ARfmXx7YfoZCeuLvttaE7iTNzKi3Gn3RG3nqFqBiWP3wSVREUEtUAvEM35wfuMV22GbHNbpWeNGqij919y"
+                                    <a href="https://solscan.io/tx/3xyMd1ARfmXx7YfoZCeuLvttaE7iTNzKi3Gn3RG3nqFqBiWP3wSVREUEtUAvEM35wfuMV22GbHNbpWeNGqij919y"
                                        class="button checkout-btn w-inline-block">
                                         <div class="relative">
                                             <div class="icon_button-arrow w-embed">
@@ -701,7 +702,7 @@
                                             </div>
                                         </div>
                                         <div class="relative">
-                                            <div class="button_text">SolScan BURN</div>
+                                            <div class="button_text">SolScan</div>
                                         </div>
                                         <div class="icon_button-light pointer-events-off w-embed">
                                             <svg xmlns="http://www.w3.org/2000/svg" width="100%" height="100%"
